<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASRWithIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="radiobutton_web">Web search</string>
	<string name="radiobutton_free">Free form</string>
	<string name="instructions_langmodel">Choose a language model</string>
	<string name="instructions_numresults">Choose the maximum number of results</string>
	<string name="speechbtn">Press the button to speak</string>  
</resources>
