<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    tools:context="com.android.asrwithintent.ASRWithIntent" >
	
    <TextView 
        android:id="@+id/instructions_langmode_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_langmodel" />
    
    <RadioGroup 
        android:id="@+id/langModel_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <RadioButton 
            android:id="@+id/langModelFree_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_free"
            android:checked="true" />
        <RadioButton 
            android:id="@+id/langModelWeb_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_web" />
    </RadioGroup>
	
    <TextView 
        android:id="@+id/instructions_numResults_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_numresults" />
    
    <EditText 
        android:id="@+id/numResults_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    <Button 
        android:id="@+id/speech_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speechbtn" />
    
    <ListView 
        android:id="@+id/nbest_listview"
        android:layout_width="match_parent"
        android:layout_height="178dp" >
        
    </ListView>
</LinearLayout>
